src/objects/XSBU_2_orgs__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is to automoatize XSBU connection setup for the countries listed in this setting</description>
    <fields>
        <fullName>Connection_Id_del__c</fullName>
        <label>Connection Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code_del__c</fullName>
        <label>Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_currency_del__c</fullName>
        <description>This should have currency of receiver org if they do not have multi-currency enabled</description>
        <label>ISO currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Named_Credential__c</fullName>
        <label>Named Credential</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_RecordType_Id__c</fullName>
        <label>Opportunity RecordType Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>XSBU 2 orgs</label>
</CustomObject>